@@ -216,6 +216,38 @@ function parseBrowseResp(data, parent, options, idStart, cacheKey) {
                         i.isFavFolder = true;
                     }
                     i.menu.push(i.isFavFolder ? RENAME_FAV_ACTION : EDIT_FAV_ACTION);
+                    if (i.isFavFolder && (!i.image || i.image.startsWith("/html/images/favorites"+LMS_IMAGE_SIZE))) {
+                        i.icon="folder";
+                        i.image=undefined;
+                    } else if (!i.isFavFolder && undefined!=i.presetParams && undefined!=i.presetParams.favorites_url) {
+                        var infoPlugin = undefined;
+
+                        if (i.presetParams.favorites_url.startsWith("db:album.title") && i.presetParams.icon=="html/images/albums.png") {
+                            i.icon="album";
+                            i.image=undefined;
+                        } else if (i.presetParams.favorites_url.startsWith("db:contributor.name")) {
+                            if (undefined==infoPlugin) {
+                                infoPlugin=getLocalStorageBool('infoPlugin');
+                            }
+                            if (i.presetParams.icon=="html/images/artists.png" || !(infoPlugin && options.artistImages)) {
+                                i.svg="artist";
+                                i.image=undefined;
+                            }
+                        } else if (i.presetParams.favorites_url.startsWith("db:genre.name") && i.presetParams.icon=="html/images/genres.png") {
+                            i.icon="label";
+                            i.image=undefined;
+                        } else if (i.presetParams.favorites_url.startsWith("db:year.id") && i.presetParams.icon=="html/images/years.png") {
+                            i.icon="date_range";
+                            i.image=undefined;
+                        } else if (i.presetParams.favorites_url.startsWith("file://") && i.presetParams.icon=="html/images/playlists.png") {
+                            i.icon="list";
+                            i.image=undefined;
+                        } else if (i.presetParams.favorites_url.startsWith("dynamicplaylist://") && i.presetParams.icon=="plugins/DynamicPlayList/html/images/dynamicplaylist.png") {
+                            i.svg="dice-list";
+                            i.image=undefined;
+                        }
+                    }
+                    console.log(JSON.stringify(i));
                 } else if (i.presetParams) {
                     if (i.menu.length>0) {
                         i.menu.push(DIVIDER);
